--- a/style.css
+++ b/style.css
@@ -5,17 +5,20 @@ footer {
 }
 
 ul {
-	margin: 1.5em; 
+	
+  margin: 1.5em; 
+  list-style: none;
 }
 ul li {
-	list-style-image: url(uncheck.gif);
-	border-bottom: 1px solid #ccc;
-	padding: .2em 0 .2em .5em;
-	font-weight: bold;
-	color: #666; 
+  list-style-image: url(uncheck.gif);
+  border-bottom: 1px solid #ccc;
+  padding: .2em 0 .2em .5em;
+  font-weight: bold;
+  color: #666; 
 }
 ul li:hover {
-	cursor: pointer;
-	background-color: #f2f2f2;
-	color: #000; 
+  cursor: pointer;
+  background-color: #f2f2f2;
+  color: #000; 
 }
+
