--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@ footer {
 }
 
 ul {
-	
+  font-size: 100px;
+  text-align: center;
   margin: 1.5em; 
   list-style: none;
 }
 ul li {
-  list-style-image: url(uncheck.gif);
   border-bottom: 1px solid #ccc;
   padding: .2em 0 .2em .5em;
   font-weight: bold;
